Changelog Notes:
Immunocompromised now works as intended.
Added Immunocompromised chance sandbox setting.
Added Hardy Sandbox Setting